--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,8 +1,8 @@
 cmake_minimum_required(VERSION 3.21)
-project(pb-cpp-library-template CXX)
+project(pb-cpp-data CXX)
 
 
-add_library(pb-cpp-library-template STATIC 
+add_library(pb-cpp-data STATIC 
     src/library.cpp
 )
 
@@ -11,10 +11,10 @@ if (UNIX)
 endif()
 
 if (WIN32)
-    target_compile_definitions(pb-cpp-library-template PRIVATE _CRT_SECURE_NO_WARNINGS)
+    target_compile_definitions(pb-cpp-data PRIVATE _CRT_SECURE_NO_WARNINGS)
 endif()
 
-set_target_properties(pb-cpp-library-template PROPERTIES 
+set_target_properties(pb-cpp-data PROPERTIES 
     CXX_STANDARD 20
     CXX_STANDARD_REQUIRED YES
     CXX_EXTENSIONS NO
@@ -23,7 +23,7 @@ set_target_properties(pb-cpp-library-template PROPERTIES
 
 
 #Bring the headers, plugin include, algorithm include
-target_include_directories(pb-cpp-library-template PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/include )
+target_include_directories(pb-cpp-data PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/include )
 
 # only do the testing targets if we are doing this project.  this way
 # other projects won't get this stuff.
@@ -41,22 +41,22 @@ if (CMAKE_CURRENT_SOURCE_DIR STREQUAL CMAKE_SOURCE_DIR)
     target_link_libraries(GTest::GTest INTERFACE gtest_main)
 
 
-    add_executable(pb-cpp-library-template-test 
+    add_executable(pb-cpp-data-test 
         test/DummyTest.cpp
     )
 
-    target_link_libraries(pb-cpp-library-template-test PRIVATE
+    target_link_libraries(pb-cpp-data-test PRIVATE
         GTest::GTest
-        pb-cpp-library-template)
+        pb-cpp-data)
 
-    set_target_properties(pb-cpp-library-template-test PROPERTIES 
+    set_target_properties(pb-cpp-data-test PROPERTIES 
         CXX_STANDARD 20
         CXX_STANDARD_REQUIRED YES
         CXX_EXTENSIONS NO
         POSITION_INDEPENDENT_CODE ON
     )
 
-    add_test(pb-cpp-library-template-gtests pb-cpp-library-template-test)
+    add_test(pb-cpp-data-gtests pb-cpp-data-test)
 
     file(MAKE_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}/test/resource/)
 
@@ -64,7 +64,7 @@ if (CMAKE_CURRENT_SOURCE_DIR STREQUAL CMAKE_SOURCE_DIR)
     file(TO_NATIVE_PATH ${CMAKE_CURRENT_BINARY_DIR}/test/resource/ TEST_RESOURCES_DEST)    
     #copy the resources used for tests into the build folder under test/resource.
     add_custom_command(
-            TARGET pb-cpp-library-template-test POST_BUILD
+            TARGET pb-cpp-data-test POST_BUILD
             COMMAND ${CMAKE_COMMAND} -E copy_directory
                     ${TEST_RESOURCES_SRC}
                     ${TEST_RESOURCES_DEST})
